[wip] iliev-5 -- Added spectrum sampling snapshot

--- a/tests/Iliev-5/Iliev-5.ipynb
+++ b/tests/Iliev-5/Iliev-5.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "## TOC\n",
     "* [Packages & Settings](#packages)\n",
+    "* [Spectrum binning](#spectrum-binning)\n",
     "* [Snapshots](#snapshots)\n",
     "* [Loading Snapshots](#loading)\n",
     "* [Maps](#maps)\n",
@@ -53,6 +54,44 @@
     "pio.templates.default = \"simple_white\"\n",
     "\n",
     "from math import pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spectrum binning <a class=\"anchor\" id=\"spectrum-binning\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def blackbody(e_Ryd, T_K):\n",
+    "    return (2 / (C.h * C.c)**2 * e_Ryd**3 / (np.exp(e_Ryd/(C.k_B * T_K)) - 1)).to(U.erg / U.cm**2)\n",
+    "\n",
+    "Ryd = 13.6 * U.eV\n",
+    "T = 1e5 * U.K\n",
+    "\n",
+    "energies = np.logspace(0, 1, 100)\n",
+    "powers = [blackbody(e * Ryd, T).value for e in energies]\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=energies, y=powers, mode='lines', line=dict(color='black', width=2)\n",
+    "))\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    width=500, height=500,\n",
+    "    xaxis=dict(mirror=True, type='linear', title='E [Ryd]',),\n",
+    "    yaxis=dict(mirror=True, type='linear', title='P [erg cm<sup>-2</sup>]'),\n",
+    ")\n",
+    "\n",
+    "fig.show()"
    ]
   },
   {
@@ -123,13 +162,48 @@
     "#     },\n",
     "}\n",
     "\n",
-    "Rhyme_CaseA = {\n",
-    "    0: {'path': f'./Iliev-5-CaseA-1000/Iliev-5-CaseA-000000.chombo.h5', },\n",
+    "RHYME = {\n",
+    "    'Rhyme 3': {\n",
+    "        'mapPlot': False,\n",
+    "        0: {'path': './Iliev-5-CaseA-3bins/Iliev-5-CaseA-3bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme 10': {\n",
+    "        'mapPlot': False,\n",
+    "        0: {'path': './Iliev-5-CaseA-10bins/Iliev-5-CaseA-10bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme 30': {\n",
+    "        'mapPlot': False,\n",
+    "        0: {'path': './Iliev-5-CaseA-30bins/Iliev-5-CaseA-30bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme 100': {\n",
+    "        'mapPlot': False,\n",
+    "        0: {'path': './Iliev-5-CaseA-100bins/Iliev-5-CaseA-100bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme Log 3': {\n",
+    "        'mapPlot': True,\n",
+    "        0: {'path': './Iliev-5-CaseA-logBins-3bins/Iliev-5-CaseA-logBins-3bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme Log 10': {\n",
+    "        'mapPlot': False,\n",
+    "        0: {'path': './Iliev-5-CaseA-logBins-10bins/Iliev-5-CaseA-logBins-10bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme Log 30': {\n",
+    "        'mapPlot': False,\n",
+    "        0: {'path': './Iliev-5-CaseA-logBins-30bins/Iliev-5-CaseA-logBins-30bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme Log 100': {\n",
+    "        'mapPlot': True,\n",
+    "        0: {'path': './Iliev-5-CaseA-logBins-100bins/Iliev-5-CaseA-logBins-100bins-000000.chombo.h5'}\n",
+    "    },\n",
     "}\n",
     "\n",
-    "Rhyme_CaseB = {\n",
-    "    0: {'path': f'./Iliev-5-CaseB-1000/Iliev-5-CaseB-000000.chombo.h5', },\n",
-    "}\n",
+    "# Rhyme_CaseA = {\n",
+    "#     0: {'path': f'./Iliev-5-CaseA-1000/Iliev-5-CaseA-000000.chombo.h5', },\n",
+    "# }\n",
+    "\n",
+    "# Rhyme_CaseB = {\n",
+    "#     0: {'path': f'./Iliev-5-CaseB-1000/Iliev-5-CaseB-000000.chombo.h5', },\n",
+    "# }\n",
     "\n",
     "# Check if files exist\n",
     "def check_if_exist(path):\n",
@@ -142,10 +216,12 @@
     "    for snap in sim['add'].values():\n",
     "        check_if_exist(snap['path'])\n",
     "\n",
-    "for snap in Rhyme_CaseA.values():\n",
-    "    check_if_exist(snap['path'])\n",
-    "for snap in Rhyme_CaseB.values():\n",
-    "    check_if_exist(snap['path'])"
+    "for sim in RHYME.values():\n",
+    "    check_if_exist(sim[0]['path'])\n",
+    "# for snap in Rhyme_CaseA.values():\n",
+    "#     check_if_exist(snap['path'])\n",
+    "# for snap in Rhyme_CaseB.values():\n",
+    "#     check_if_exist(snap['path'])"
    ]
   },
   {
@@ -243,19 +319,30 @@
     "            result[snap_time][simname]['nHII'] = f.read_reals(np.float32).reshape(domain)\n",
     "            \n",
     "            f.close()\n",
+    "            \n",
+    "            \n",
+    "    for sn, sim in RHYME.items():\n",
+    "        for t in TIMES:\n",
+    "            r = PyRhyme(sim[0]['path'])\n",
+    "            result[t][sn] = load_rhyme(time_to_snap_id(t, r), r)\n",
     "        \n",
-    "    rA = PyRhyme(Rhyme_CaseA[0]['path'])\n",
-    "    rB = PyRhyme(Rhyme_CaseB[0]['path'])\n",
+    "        r.dataset.close_current()\n",
+    "        r.dataset.clean_all()\n",
+    "        \n",
+    "        del r\n",
+    "        \n",
+    "#     rA = PyRhyme(Rhyme_CaseA[0]['path'])\n",
+    "#     rB = PyRhyme(Rhyme_CaseB[0]['path'])\n",
     "    \n",
-    "    for t in TIMES:\n",
-    "        result[t]['Rhyme_CaseA'] = load_rhyme(time_to_snap_id(t, rA), rA)\n",
-    "        result[t]['Rhyme_CaseB'] = load_rhyme(time_to_snap_id(t, rB), rB)\n",
+    "#     for t in TIMES:\n",
+    "#         result[t]['Rhyme_CaseA'] = load_rhyme(time_to_snap_id(t, rA), rA)\n",
+    "#         result[t]['Rhyme_CaseB'] = load_rhyme(time_to_snap_id(t, rB), rB)\n",
     "\n",
-    "    rA.dataset.close_current()\n",
-    "    rA.dataset.clean_all()\n",
+    "#     rA.dataset.close_current()\n",
+    "#     rA.dataset.clean_all()\n",
     "    \n",
-    "    rB.dataset.close_current()\n",
-    "    rB.dataset.clean_all()\n",
+    "#     rB.dataset.close_current()\n",
+    "#     rB.dataset.clean_all()\n",
     "    \n",
     "    return result\n",
     "            \n",
@@ -279,7 +366,7 @@
     "            print(f\"{t:3.1f}: {simname:18s}: {attr} = {sim[attr][x, y, z]:3.2e}\")\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    check_cell(attr='T', x=64)"
+    "    check_cell(attr='nHI', x=64)"
    ]
   },
   {
@@ -297,12 +384,12 @@
    "source": [
     "def plot_maps(x, y, heatmaps):\n",
     "    titles = {\n",
-    "        'Rhyme_CaseA': {'name': 'Rhyme (Case A)', 'num': 0},\n",
+    "        'Rhyme Log 100': {'name': 'Rhyme (100 Log bins)', 'num': 0},\n",
     "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
     "        'Enzo': {'name': 'Enzo', 'num': 2},\n",
     "        'Flash': {'name': 'Flash', 'num': 3},\n",
     "        'HART': {'name': 'HART', 'num': 4},\n",
-    "        'Rhyme_CaseB': {'name': 'Rhyme (Case B)', 'num': 5},\n",
+    "        'Rhyme Log 3': {'name': 'Rhyme (3 Log bins)', 'num': 5},\n",
     "        'LICORICE': {'name': 'Licorice', 'num': 6},\n",
     "        'RSPH': {'name': 'RSPH', 'num': 7},\n",
     "        'RH1D': {'name': 'RH1D', 'num': 8},\n",
@@ -326,7 +413,7 @@
     "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
     "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
     "    \n",
-    "    attrs = ['nH', 'p', 'T', 'fHI']\n",
+    "#     attrs = ['nH', 'p', 'T', 'fHI']\n",
     "    attrs = ['p', 'T', 'fHI']\n",
     "    attr_titles = {'nH': 'log(n<sub>H</sub>)', 'p': 'log(p)', 'T': 'log(T)', 'fHI': 'log(f<sub>HI</sub>)'}\n",
     "    attr_cs = {'nH': 'Spectral', 'p': 'Viridis', 'T': 'Inferno', 'fHI': 'Spectral'}\n",
@@ -362,7 +449,7 @@
     "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme_CaseA' else False,\n",
     "            ), h['row'], h['col'])\n",
     "            \n",
-    "            if h['row'] == 4 or sn == 'Rhyme_CaseB':\n",
+    "            if h['row'] == 4 or sn == 'Rhyme Log 3':\n",
     "                fig.update_xaxes(\n",
     "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
     "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
@@ -426,7 +513,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -437,22 +524,26 @@
     "    \n",
     "    heatmaps = {}\n",
     "    \n",
-    "    for sn, sim in DATA[t].items():  \n",
+    "    for sn, sim in DATA[t].items():\n",
+    "        if sn[:5] == 'Rhyme':\n",
+    "            if not RHYME[sn]['mapPlot']:\n",
+    "                continue\n",
     "        heatmaps[sn] = {}\n",
-    "        if sn == 'Rhyme_CaseA':\n",
+    "        if sn == 'Rhyme Log 100':\n",
     "            heatmaps[sn]['row'] = 1\n",
     "            heatmaps[sn]['col'] = 1\n",
-    "        elif sn == 'Rhyme_CaseB':\n",
+    "        elif sn == 'Rhyme Log 3':\n",
     "            heatmaps[sn]['row'] = 3\n",
     "            heatmaps[sn]['col'] = 1\n",
     "        else:\n",
     "            heatmaps[sn]['row'] = BINARIES[sn]['row']\n",
     "            heatmaps[sn]['col'] = BINARIES[sn]['col']\n",
     "\n",
-    "        heatmaps[sn]['nH'] = np.log10(sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0])\n",
-    "        heatmaps[sn]['p'] = np.log10(sim['p'][:, :, 0])\n",
-    "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, 0])\n",
-    "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, 0] / (sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0]))\n",
+    "        l = 2\n",
+    "        heatmaps[sn]['nH'] = np.log10(sim['nHI'][:, :, l] + sim['nHII'][:, :, l])\n",
+    "        heatmaps[sn]['p'] = np.log10(sim['p'][:, :, l])\n",
+    "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, l])\n",
+    "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, l] / (sim['nHI'][:, :, l] + sim['nHII'][:, :, l]))\n",
     "    \n",
     "    x = np.linspace(0, 15, 128)\n",
     "        \n",
@@ -461,7 +552,7 @@
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=500)"
+    "    fHI_maps(t=100)"
    ]
   },
   {
@@ -478,7 +569,7 @@
    "outputs": [],
    "source": [
     "def plot_lineouts(ts, attr, title):\n",
-    "    colors = px.colors.qualitative.G10 # Pastel\n",
+    "    colors = px.colors.qualitative.Dark24 # Pastel\n",
     "    \n",
     "    len_t = len(ts)\n",
     "    \n",
@@ -500,11 +591,11 @@
     "    for i, t in enumerate(ts):\n",
     "        for si, (sn, sim) in enumerate(DATA[t].items()):\n",
     "            x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
-    "            \n",
+    "            l = 1\n",
     "            if attr == 'fHI':\n",
-    "                y = np.log10(sim['nHI'][:, 0, 0] / (sim['nHI'][:, 0, 0] + sim['nHII'][:, 0, 0]))\n",
+    "                y = np.log10(sim['nHI'][:, l, l] / (sim['nHI'][:, l, l] + sim['nHII'][:, l, l]))\n",
     "            else:\n",
-    "                y = np.log10(sim[attr][:, 0, 0])\n",
+    "                y = np.log10(sim[attr][:, l, l])\n",
     "                \n",
     "            fig.add_trace(go.Scatter(\n",
     "                x=x, y=y, name=f\"{sn}\", mode='lines',\n",
@@ -513,9 +604,9 @@
     "            ), 1, i+1)\n",
     "            \n",
     "            fig.update_xaxes(\n",
-    "                row=1, col=i+1, type='linear', mirror=True,\n",
+    "                row=1, col=i+1, type='linear', mirror=True, range=(2/128, 1),\n",
     "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                tickmode='array', tickvals=[0, 0.5, 1], ticktext=['0', '.5', '1'],\n",
+    "                tickmode='array', tickvals=[2/128, 0.5, 1], ticktext=['0', '.5', '1'],\n",
     "            )\n",
     "            \n",
     "            tickvals = list(range(-40, 20, 2))\n",
@@ -584,7 +675,7 @@
     "            nHII_prof = np.einsum('iii->i', sim['nHII'])\n",
     "            fHI_prof = nHII_prof / (nHI_prof + nHII_prof)\n",
     "\n",
-    "            pos = i_front_get_position(xs, fHI_prof)['0', '.5', '1']\n",
+    "            pos = i_front_get_position(xs, fHI_prof)\n",
     "            \n",
     "            if len(pos) == 1:\n",
     "                sim['I-front']['pos_kpc'] = pos[0][0]\n",
@@ -602,7 +693,7 @@
    "outputs": [],
    "source": [
     "def i_front_pos_plot():\n",
-    "    colors = px.colors.qualitative.Plotly # Pastel\n",
+    "    colors = px.colors.qualitative.Dark24 # Pastel\n",
     "    \n",
     "    fig = go.Figure()\n",
     "    \n",
@@ -615,7 +706,17 @@
     "            mode='lines+markers',\n",
     "            line=dict(color=colors[i]),\n",
     "        ))\n",
+    "        \n",
+    "#     def approx_rI(t, rS=5.4 * U.kpc, T=1e4 * U.K, gamma=5./3):\n",
+    "#         cs = np.sqrt(gamma * C.k_B / C.m_p * T)\n",
+    "#         return (rS * (1 + (7 * cs * (t * U.Myr)) / (4 * rS))).to(U.kpc)\n",
+    "        \n",
+    "#     rI = [approx_rI(t).value for t in DATA.keys()]\n",
     "\n",
+    "#     fig.add_trace(go.Scatter(\n",
+    "#         x=list(DATA.keys()), y=rI, name='Approx. r<sub>I</sub>',\n",
+    "#         mode='lines', line=dict(color='black', width=1.5)\n",
+    "#     ))\n",
     "            \n",
     "    width, height = 500 + 150, 500\n",
     "            \n",
