[wip] Iliev-5/6 -- update notebooks

--- a/tests/Iliev-6/Iliev-6.ipynb
+++ b/tests/Iliev-6/Iliev-6.ipynb
@@ -80,56 +80,68 @@
     "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
     "TIMES = [1, 3, 10, 25, 75]\n",
     "\n",
+    "COLORS = px.colors.qualitative.Pastel\n",
+    "COLORS2 = px.colors.qualitative.Plotly\n",
+    "\n",
     "BINARIES = {\n",
     "    'CAPREOLE+C2-RAY': {\n",
-    "        'row': 1, 'col':3,\n",
+    "        'row': 1, 'col':3, 'color': COLORS[0], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'Flash': {\n",
-    "#         'row':1, 'col 'c': 4,\n",
+    "#         'row':1, 'col 'c': 4, 'color': COLORS[4], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'HART': {\n",
-    "        'row': 2, 'col': 3,\n",
+    "        'row': 2, 'col': 3, 'color': COLORS[5], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/hart{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/hart_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'LICORICE': {\n",
-    "#         'row': 2, 'col': 4,\n",
+    "#         'row': 2, 'col': 4, 'color': COLORS[6], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'RSPH': {\n",
-    "        'row': 3, 'col': 3,\n",
+    "        'row': 3, 'col': 3, 'color': COLORS[2], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rsph{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rsph_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "    'RH1D': {\n",
-    "        'row': 3, 'col': 4,\n",
+    "        'row': 3, 'col': 4, 'color': COLORS[3], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rh1d{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rh1d_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'ZEUS-MP': {\n",
-    "#         'row': 4, 'col': 3,\n",
+    "#         'row': 4, 'col': 3, 'color': COLORS[7], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "}\n",
     "\n",
-    "Rhyme_CaseA = {\n",
-    "    0: {'path': f'./Iliev-6-CaseA-1000/Iliev-6-CaseA-000000.chombo.h5', },\n",
-    "}\n",
-    "\n",
-    "Rhyme_CaseB = {\n",
-    "    0: {'path': f'./Iliev-6-CaseB-1000/Iliev-6-CaseB-000000.chombo.h5', },\n",
+    "RHYME = {\n",
+    "    'Rhyme CaseA Log 3': {\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "        0: {'path': './Iliev-6-logBins-CaseA-3bins/Iliev-6-logBins-CaseA-3bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme CaseA Log 100': {\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "        0: {'path': './Iliev-6-logBins-CaseA-100bins/Iliev-6-logBins-CaseA-100bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme CaseB Log 3': {\n",
+    "        'mapPlot': True, 'color': COLORS2[2], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "        0: {'path': './Iliev-6-logBins-CaseB-3bins/Iliev-6-logBins-CaseB-3bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme CaseB Log 100': {\n",
+    "        'mapPlot': True, 'color': COLORS2[2], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "        0: {'path': './Iliev-6-logBins-CaseB-100bins/Iliev-6-logBins-CaseB-100bins-000000.chombo.h5'}\n",
+    "    },\n",
     "}\n",
     "\n",
     "# Check if files exist\n",
     "def check_if_exist(path):\n",
-    "    \n",
-    "    \n",
     "    if not Path(snap['path']).is_file():\n",
     "        print(f\"Not found: {snap['path']}\")\n",
     "        \n",
@@ -139,10 +151,8 @@
     "    for snap in sim['add'].values():\n",
     "        check_if_exist(snap['path'])\n",
     "\n",
-    "for snap in Rhyme_CaseA.values():\n",
-    "    check_if_exist(snap['path'])\n",
-    "for snap in Rhyme_CaseB.values():\n",
-    "    check_if_exist(snap['path'])"
+    "for sim in RHYME.values():\n",
+    "    check_if_exist(sim[0]['path'])"
    ]
   },
   {
@@ -205,6 +215,11 @@
     "    return res\n",
     "\n",
     "\n",
+    "def fill_extra_vars(sim, orig):\n",
+    "    for attr in ['color', 'style', 'opacity', 'lw']:\n",
+    "        sim[attr] = orig[attr]\n",
+    "\n",
+    "\n",
     "def reading_binary_files():\n",
     "    result = {}\n",
     "    \n",
@@ -223,6 +238,8 @@
     "            result[snap_time][simname]['p'] = f.read_reals(np.float32).reshape(domain)\n",
     "            result[snap_time][simname]['T'] = f.read_reals(np.float32).reshape(domain)\n",
     "            \n",
+    "            fill_extra_vars(result[snap_time][simname], sim)\n",
+    "            \n",
     "            f.close()\n",
     "            \n",
     "        for snap_time, snap in sim['add'].items():\n",
@@ -240,19 +257,18 @@
     "            result[snap_time][simname]['nHII'] = f.read_reals(np.float32).reshape(domain)\n",
     "            \n",
     "            f.close()\n",
+    "            \n",
+    "    for sn, sim in RHYME.items():\n",
+    "        for t in TIMES:\n",
+    "            r = PyRhyme(sim[0]['path'])\n",
+    "            result[t][sn] = load_rhyme(time_to_snap_id(t, r), r)\n",
+    "            \n",
+    "            fill_extra_vars(result[t][sn], sim)\n",
     "        \n",
-    "    rA = PyRhyme(Rhyme_CaseA[0]['path'])\n",
-    "    rB = PyRhyme(Rhyme_CaseB[0]['path'])\n",
-    "    \n",
-    "    for t in TIMES:\n",
-    "        result[t]['Rhyme_CaseA'] = load_rhyme(time_to_snap_id(t, rA), rA)\n",
-    "        result[t]['Rhyme_CaseB'] = load_rhyme(time_to_snap_id(t, rB), rB)\n",
-    "\n",
-    "    rA.dataset.close_current()\n",
-    "    rA.dataset.clean_all()\n",
-    "    \n",
-    "    rB.dataset.close_current()\n",
-    "    rB.dataset.clean_all()\n",
+    "        r.dataset.close_current()\n",
+    "        r.dataset.clean_all()\n",
+    "        \n",
+    "        del r\n",
     "    \n",
     "    return result\n",
     "            \n",
@@ -292,12 +308,12 @@
    "source": [
     "def plot_maps(x, y, heatmaps):\n",
     "    titles = {\n",
-    "        'Rhyme_CaseA': {'name': 'Rhyme (Case A)', 'num': 0},\n",
+    "        'Rhyme CaseA Log 100': {'name': 'Rhyme (Case A)', 'num': 0},\n",
     "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
     "        'Flash': {'name': 'Flash', 'num': 2},\n",
     "        'HART': {'name': 'HART', 'num': 3},\n",
     "        'LICORICE': {'name': 'Licorice', 'num': 4},\n",
-    "        'Rhyme_CaseB': {'name': 'Rhyme (Case B)', 'num': 5},\n",
+    "        'Rhyme CaseB Log 100': {'name': 'Rhyme (Case B)', 'num': 5},\n",
     "        'RSPH': {'name': 'RSPH', 'num': 6},\n",
     "        'RH1D': {'name': 'RH1D', 'num': 7},\n",
     "        'ZEUS-MP': {'name': \"Zeus-MP\", 'num': 8}\n",
@@ -321,7 +337,7 @@
     "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
     "    \n",
     "    attrs = ['nH', 'p', 'T', 'fHI']\n",
-    "    attr_titles = {'nH': 'n<sub>H</sub>', 'p': 'p', 'T': 'T', 'fHI': 'f<sub>HI</sub>'}\n",
+    "    attr_titles = {'nH': 'n<sub>HI</sub>', 'p': 'p', 'T': 'T', 'fHI': 'f<sub>HI</sub>'}\n",
     "    attr_cs = {'nH': 'Spectral', 'p': 'Viridis', 'T': 'Inferno', 'fHI': 'Spectral'}\n",
     "    attr_cs_rng = {'nH': [-2, 1], 'p': [-17, -14.5], 'T': [2, 4.5], 'fHI': [-4, 0]}\n",
     "    n_slices = len(attrs)\n",
@@ -387,21 +403,21 @@
     "                fig.add_shape(\n",
     "                    type='line', xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
     "                    x0=0, y0=0, x1=xend, y1=yend,\n",
-    "                    line=dict(color=\"black\", width=4 if h['col'] == 1 else 2.5), opacity=1.0,\n",
+    "                    line=dict(color=\"white\", width=4 if h['col'] == 1 else 2.5), opacity=1.0,\n",
     "                )\n",
     "            \n",
     "            textangle = 90 / (2 * n_slices) * (2 * slc + 1)\n",
     "            fig.add_annotation(\n",
     "                x=xannot, y=yannot, xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
     "                text=attr_titles[attr], showarrow=False,\n",
-    "                font=dict(color='black', size=24 if h['col'] == 1 else 16), textangle=textangle,\n",
+    "                font=dict(color='white', size=24 if h['col'] == 1 else 16), textangle=textangle,\n",
     "            )\n",
     "            \n",
     "        fig.add_annotation(\n",
     "            x=14, y=0.25, xanchor='right', yanchor='bottom',\n",
     "            xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
     "            text=titles[sn]['name'], showarrow=False,\n",
-    "            font=dict(color='black', size=22 if h['col'] == 1 else 14), \n",
+    "            font=dict(color='white', size=22 if h['col'] == 1 else 14), \n",
     "        )\n",
     "            \n",
     "\n",
@@ -429,21 +445,26 @@
     "    heatmaps = {}\n",
     "    \n",
     "    for sn, sim in DATA[t].items():  \n",
-    "        heatmaps[sn] = {}\n",
-    "        if sn == 'Rhyme_CaseA':\n",
+    "        if sn == 'Rhyme CaseA Log 100':\n",
+    "            heatmaps[sn] = {}\n",
     "            heatmaps[sn]['row'] = 1\n",
     "            heatmaps[sn]['col'] = 1\n",
-    "        elif sn == 'Rhyme_CaseB':\n",
+    "        elif sn == 'Rhyme CaseB Log 100':\n",
+    "            heatmaps[sn] = {}\n",
     "            heatmaps[sn]['row'] = 3\n",
     "            heatmaps[sn]['col'] = 1\n",
+    "        elif sn[:5] == 'Rhyme':\n",
+    "            continue\n",
     "        else:\n",
+    "            heatmaps[sn] = {}\n",
     "            heatmaps[sn]['row'] = BINARIES[sn]['row']\n",
     "            heatmaps[sn]['col'] = BINARIES[sn]['col']\n",
     "\n",
-    "        heatmaps[sn]['nH'] = np.log10(sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0])\n",
-    "        heatmaps[sn]['p'] = np.log10(sim['p'][:, :, 0])\n",
-    "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, 0])\n",
-    "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, 0] / (sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0]))\n",
+    "        l = 2\n",
+    "        heatmaps[sn]['nH'] = np.log10(sim['nHI'][:, :, l])\n",
+    "        heatmaps[sn]['p'] = np.log10(sim['p'][:, :, l])\n",
+    "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, l])\n",
+    "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, l] / (sim['nHI'][:, :, l] + sim['nHII'][:, :, l]))\n",
     "    \n",
     "    x = np.linspace(0, 15, 128)\n",
     "        \n",
@@ -452,7 +473,7 @@
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=1)"
+    "    fHI_maps(t=10)"
    ]
   },
   {
@@ -491,15 +512,15 @@
     "    for i, t in enumerate(ts):\n",
     "        for si, (sn, sim) in enumerate(DATA[t].items()):\n",
     "            x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
-    "            \n",
+    "            l = 1\n",
     "            if attr == 'fHI':\n",
-    "                y = np.log10(sim['nHI'][:, 0, 0] / (sim['nHI'][:, 0, 0] + sim['nHII'][:, 0, 0]))\n",
+    "                y = np.log10(sim['nHI'][:, l, l] / (sim['nHI'][:, l, l] + sim['nHII'][:, l, l]))\n",
     "            else:\n",
-    "                y = np.log10(sim[attr][:, 0, 0])\n",
+    "                y = np.log10(sim[attr][:, l, l])\n",
     "                \n",
     "            fig.add_trace(go.Scatter(\n",
     "                x=x, y=y, name=f\"{sn}\", mode='lines',\n",
-    "                line=dict(color=colors[si], width=1.5),\n",
+    "                line=dict(color=sim['color'], dash=sim['style'], width=sim['lw']),\n",
     "                showlegend=True if i == 0 else False,\n",
     "            ), 1, i+1)\n",
     "            \n",
@@ -605,7 +626,11 @@
     "        fig.add_trace(go.Scatter(\n",
     "            x=times, y=ys, name=sn,\n",
     "            mode='lines+markers',\n",
-    "            line=dict(color=colors[i]),\n",
+    "            line=dict(\n",
+    "                color=DATA[TIMES[0]][sn]['color'], \n",
+    "                dash=DATA[TIMES[0]][sn]['style'],\n",
+    "                width=DATA[TIMES[0]][sn]['lw'],\n",
+    "            ),\n",
     "        ))\n",
     "\n",
     "            \n",
