--- a/tests/Iliev-5/Iliev-5.ipynb
+++ b/tests/Iliev-5/Iliev-5.ipynb
@@ -88,7 +88,7 @@
     "fig.update_layout(\n",
     "    width=500, height=500,\n",
     "    xaxis=dict(mirror=True, type='linear', title='E [Ryd]',),\n",
-    "    yaxis=dict(mirror=True, type='linear', title='P [erg cm<sup>-2</sup>]'),\n",
+    "    yaxis=dict(mirror=True, type='linear', title='B [erg s<sup>-1</sup> cm<sup>-2</sup>]'),\n",
     ")\n",
     "\n",
     "fig.show()"
@@ -119,91 +119,86 @@
     "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
     "TIMES = [10, 30, 100, 200, 500]\n",
     "\n",
+    "COLORS = px.colors.qualitative.Pastel\n",
+    "COLORS2 = px.colors.qualitative.Plotly\n",
+    "\n",
     "BINARIES = {\n",
     "    'CAPREOLE+C2-RAY': {\n",
-    "        'row': 1, 'col': 3,\n",
+    "        'row': 1, 'col': 3, 'color': COLORS[0], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "    'Enzo': {\n",
-    "        'row': 1, 'col': 4,\n",
+    "        'row': 1, 'col': 4, 'color': COLORS[1], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/enzo{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/enzo_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'Flash': {\n",
-    "#         'row': 2, 'col': 3,\n",
+    "#         'row': 2, 'col': 3, 'color': COLORS[4], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "#     'HART': {\n",
-    "#         'row': 2, 'col': 4,\n",
+    "#         'row': 2, 'col': 4, 'color': COLORS[5], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Gnedin{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Gnedin_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "#     'LICORICE': {\n",
-    "#         'row': 3, 'col': 3,\n",
+    "#         'row': 3, 'col': 3, 'color': COLORS[6], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'RSPH': {\n",
-    "        'row': 3, 'col': 4,\n",
+    "        'row': 3, 'col': 4, 'color': COLORS[2], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/susa{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/susa_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "    'RH1D': {\n",
-    "        'row': 4, 'col': 3,\n",
+    "        'row': 4, 'col': 3, 'color': COLORS[3], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/RH1D{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/RH1D_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'ZEUS-MP': {\n",
-    "#         'row': 4, 'col': 4,\n",
+    "#         'row': 4, 'col': 4, 'color': COLORS[7], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "}\n",
     "\n",
     "RHYME = {\n",
-    "    'Rhyme 3': {\n",
-    "        'mapPlot': False,\n",
+    "    'Rhyme Lin 3': {\n",
+    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-3bins/Iliev-5-CaseA-3bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme 10': {\n",
-    "        'mapPlot': False,\n",
+    "    'Rhyme Lin 10': {\n",
+    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-10bins/Iliev-5-CaseA-10bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme 30': {\n",
-    "        'mapPlot': False,\n",
+    "    'Rhyme Lin 30': {\n",
+    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-30bins/Iliev-5-CaseA-30bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme 100': {\n",
-    "        'mapPlot': False,\n",
+    "    'Rhyme Lin 100': {\n",
+    "        'mapPlot': False, 'color': COLORS2[1], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-100bins/Iliev-5-CaseA-100bins-000000.chombo.h5'}\n",
     "    },\n",
     "    'Rhyme Log 3': {\n",
-    "        'mapPlot': True,\n",
+    "        'mapPlot': True, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-3bins/Iliev-5-CaseA-logBins-3bins-000000.chombo.h5'}\n",
     "    },\n",
     "    'Rhyme Log 10': {\n",
-    "        'mapPlot': False,\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-10bins/Iliev-5-CaseA-logBins-10bins-000000.chombo.h5'}\n",
     "    },\n",
     "    'Rhyme Log 30': {\n",
-    "        'mapPlot': False,\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-30bins/Iliev-5-CaseA-logBins-30bins-000000.chombo.h5'}\n",
     "    },\n",
     "    'Rhyme Log 100': {\n",
-    "        'mapPlot': True,\n",
+    "        'mapPlot': True, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-100bins/Iliev-5-CaseA-logBins-100bins-000000.chombo.h5'}\n",
     "    },\n",
     "}\n",
-    "\n",
-    "# Rhyme_CaseA = {\n",
-    "#     0: {'path': f'./Iliev-5-CaseA-1000/Iliev-5-CaseA-000000.chombo.h5', },\n",
-    "# }\n",
-    "\n",
-    "# Rhyme_CaseB = {\n",
-    "#     0: {'path': f'./Iliev-5-CaseB-1000/Iliev-5-CaseB-000000.chombo.h5', },\n",
-    "# }\n",
     "\n",
     "# Check if files exist\n",
     "def check_if_exist(path):\n",
@@ -217,11 +212,7 @@
     "        check_if_exist(snap['path'])\n",
     "\n",
     "for sim in RHYME.values():\n",
-    "    check_if_exist(sim[0]['path'])\n",
-    "# for snap in Rhyme_CaseA.values():\n",
-    "#     check_if_exist(snap['path'])\n",
-    "# for snap in Rhyme_CaseB.values():\n",
-    "#     check_if_exist(snap['path'])"
+    "    check_if_exist(sim[0]['path'])"
    ]
   },
   {
@@ -284,6 +275,11 @@
     "    return res\n",
     "\n",
     "\n",
+    "def fill_extra_vars(sim, orig):\n",
+    "    for attr in ['color', 'style', 'opacity', 'lw']:\n",
+    "        sim[attr] = orig[attr]\n",
+    "\n",
+    "\n",
     "def reading_binary_files():\n",
     "    result = {}\n",
     "    \n",
@@ -301,6 +297,8 @@
     "            result[snap_time][simname]['nHI'] = f.read_reals(np.float32).reshape(domain)\n",
     "            result[snap_time][simname]['p'] = f.read_reals(np.float32).reshape(domain)\n",
     "            result[snap_time][simname]['T'] = f.read_reals(np.float32).reshape(domain)\n",
+    "            \n",
+    "            fill_extra_vars(result[snap_time][simname], sim)\n",
     "            \n",
     "            f.close()\n",
     "            \n",
@@ -325,24 +323,13 @@
     "        for t in TIMES:\n",
     "            r = PyRhyme(sim[0]['path'])\n",
     "            result[t][sn] = load_rhyme(time_to_snap_id(t, r), r)\n",
+    "            \n",
+    "            fill_extra_vars(result[t][sn], sim)\n",
     "        \n",
     "        r.dataset.close_current()\n",
     "        r.dataset.clean_all()\n",
     "        \n",
     "        del r\n",
-    "        \n",
-    "#     rA = PyRhyme(Rhyme_CaseA[0]['path'])\n",
-    "#     rB = PyRhyme(Rhyme_CaseB[0]['path'])\n",
-    "    \n",
-    "#     for t in TIMES:\n",
-    "#         result[t]['Rhyme_CaseA'] = load_rhyme(time_to_snap_id(t, rA), rA)\n",
-    "#         result[t]['Rhyme_CaseB'] = load_rhyme(time_to_snap_id(t, rB), rB)\n",
-    "\n",
-    "#     rA.dataset.close_current()\n",
-    "#     rA.dataset.clean_all()\n",
-    "    \n",
-    "#     rB.dataset.close_current()\n",
-    "#     rB.dataset.clean_all()\n",
     "    \n",
     "    return result\n",
     "            \n",
@@ -384,12 +371,12 @@
    "source": [
     "def plot_maps(x, y, heatmaps):\n",
     "    titles = {\n",
-    "        'Rhyme Log 100': {'name': 'Rhyme (100 Log bins)', 'num': 0},\n",
+    "        'Rhyme Log 100': {'name': 'Rhyme CaseA (100 Log bins)', 'num': 0},\n",
     "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
     "        'Enzo': {'name': 'Enzo', 'num': 2},\n",
     "        'Flash': {'name': 'Flash', 'num': 3},\n",
     "        'HART': {'name': 'HART', 'num': 4},\n",
-    "        'Rhyme Log 3': {'name': 'Rhyme (3 Log bins)', 'num': 5},\n",
+    "        'Rhyme Log 3': {'name': 'Rhyme CaseA (3 Log bins)', 'num': 5},\n",
     "        'LICORICE': {'name': 'Licorice', 'num': 6},\n",
     "        'RSPH': {'name': 'RSPH', 'num': 7},\n",
     "        'RH1D': {'name': 'RH1D', 'num': 8},\n",
@@ -552,7 +539,7 @@
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=100)"
+    "    fHI_maps(t=30)"
    ]
   },
   {
@@ -599,7 +586,8 @@
     "                \n",
     "            fig.add_trace(go.Scatter(\n",
     "                x=x, y=y, name=f\"{sn}\", mode='lines',\n",
-    "                line=dict(color=colors[si], width=1.5),\n",
+    "                opacity=sim['opacity'],\n",
+    "                line=dict(color=sim['color'], dash=sim['style'], width=sim['lw']),\n",
     "                showlegend=True if i == 0 else False,\n",
     "            ), 1, i+1)\n",
     "            \n",
@@ -648,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def i_front_get_position(xs, fHI, f0=.5):\n",
+    "def i_front_get_position(xs, fHI, f0=.25):\n",
     "    ydir = np.sign(np.diff(fHI))\n",
     "    turning_points = 1 + np.where(np.diff(ydir) != 0)[0]\n",
     "    \n",
@@ -699,24 +687,31 @@
     "    \n",
     "    times = list(DATA.keys())\n",
     "    for i, sn in enumerate(DATA[10].keys()):\n",
-    "        ys = [DATA[t][sn]['I-front']['pos_kpc'] for t in times]\n",
+    "        ys = np.array([DATA[t][sn]['I-front']['pos_kpc'] for t in times])\n",
     "        \n",
     "        fig.add_trace(go.Scatter(\n",
-    "            x=times, y=ys, name=sn,\n",
+    "            x=times, y=ys/5.4, name=sn,\n",
     "            mode='lines+markers',\n",
-    "            line=dict(color=colors[i]),\n",
+    "            opacity=DATA[TIMES[0]][sn]['opacity'],\n",
+    "            line=dict(\n",
+    "                color=DATA[TIMES[0]][sn]['color'],\n",
+    "                dash=DATA[TIMES[0]][sn]['style'],\n",
+    "                width=DATA[TIMES[0]][sn]['lw'],\n",
+    "            ),\n",
     "        ))\n",
     "        \n",
-    "#     def approx_rI(t, rS=5.4 * U.kpc, T=1e4 * U.K, gamma=5./3):\n",
-    "#         cs = np.sqrt(gamma * C.k_B / C.m_p * T)\n",
-    "#         return (rS * (1 + (7 * cs * (t * U.Myr)) / (4 * rS))).to(U.kpc)\n",
+    "    def approx_rI(t, rS=5.4 * U.kpc, T=1e4 * U.K, gamma=5./3):\n",
+    "        cs = np.sqrt(gamma * C.k_B / C.m_p * T)\n",
+    "#         return (rS * (1 + ((7 * cs * (t * U.Myr)) / (4 * rS))**(4.0/7))).to(U.kpc)\n",
+    "        t_rec = (3.86e15 * U.s).to(U.Myr).value\n",
+    "        return (rS * (1 - np.exp(-t / t_rec))**(1.0/3))\n",
     "        \n",
-    "#     rI = [approx_rI(t).value for t in DATA.keys()]\n",
+    "    rI = [approx_rI(t).value / 5.4 for t in DATA.keys()]\n",
     "\n",
-    "#     fig.add_trace(go.Scatter(\n",
-    "#         x=list(DATA.keys()), y=rI, name='Approx. r<sub>I</sub>',\n",
-    "#         mode='lines', line=dict(color='black', width=1.5)\n",
-    "#     ))\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=list(DATA.keys()), y=rI, name='Analytcal Solution',\n",
+    "        mode='lines', line=dict(color='black', width=1.25)\n",
+    "    ))\n",
     "            \n",
     "    width, height = 500 + 150, 500\n",
     "            \n",
@@ -724,7 +719,7 @@
     "        margin=dict(b=10, t=10, l=10, r=10),\n",
     "        width=width, height=height,\n",
     "        xaxis=dict(\n",
-    "            type='log', mirror=True, title='<i>t</i> [Myr]',\n",
+    "            type='linear', mirror=True, title='<i>t</i> [Myr]',\n",
     "            titlefont=dict(size=18),\n",
     "            tickmode='array',\n",
     "            tickvals=TIMES,\n",
@@ -732,11 +727,11 @@
     "            tickfont=dict(size=14),\n",
     "        ),\n",
     "        yaxis=dict(\n",
-    "            type='linear', mirror=True, title='<i>x</i><sub>I-front</sub> [kpc]',\n",
+    "            type='linear', mirror=True, title='r<sub>I-front</sub> / r<sub>S</sub><sup>0</sup>',\n",
     "            titlefont=dict(size=18),\n",
     "            tickmode='array',\n",
-    "            tickvals=list(range(2, 11, 2)),\n",
-    "            ticktext=[str(yy) for yy in range(2, 11, 2)],\n",
+    "            tickvals=list(np.linspace(0.4, 1.8, 8)),\n",
+    "            ticktext=[str(yy) for yy in np.linspace(0.4, 1.8, 8)],\n",
     "            tickfont=dict(size=14),\n",
     "        ),\n",
     "    )\n",
