[wip] Iliev -- Update notebooks

--- a/tests/Iliev-5/Iliev-5.ipynb
+++ b/tests/Iliev-5/Iliev-5.ipynb
@@ -166,37 +166,45 @@
     "}\n",
     "\n",
     "RHYME = {\n",
-    "    'Rhyme Lin 3': {\n",
-    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Lin 3': {\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-3bins/Iliev-5-CaseA-3bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Lin 10': {\n",
-    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Lin 10': {\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-10bins/Iliev-5-CaseA-10bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Lin 30': {\n",
-    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Lin 30': {\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-30bins/Iliev-5-CaseA-30bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Lin 100': {\n",
-    "        'mapPlot': False, 'color': COLORS2[1], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Lin 100': {\n",
+    "        'mapPlot': False, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-100bins/Iliev-5-CaseA-100bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Log 3': {\n",
-    "        'mapPlot': True, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Log 3': {\n",
+    "        'mapPlot': True, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-3bins/Iliev-5-CaseA-logBins-3bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Log 10': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Log 10': {\n",
+    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-10bins/Iliev-5-CaseA-logBins-10bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Log 30': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Log 30': {\n",
+    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-30bins/Iliev-5-CaseA-logBins-30bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme Log 100': {\n",
-    "        'mapPlot': True, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "    'Rhyme CaseA Log 100': {\n",
+    "        'mapPlot': True, 'color': COLORS2[1], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-100bins/Iliev-5-CaseA-logBins-100bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme CaseB Log 3': {\n",
+    "        'mapPlot': True, 'color': COLORS2[2], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "        0: {'path': './Iliev-5-CaseB-logBins-3bins/Iliev-5-CaseB-logBins-3bins-000000.chombo.h5'}\n",
+    "    },\n",
+    "    'Rhyme CaseB Log 100': {\n",
+    "        'mapPlot': True, 'color': COLORS2[2], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "        0: {'path': './Iliev-5-logBins-CaseB-100bins/Iliev-5-logBins-CaseB-100bins-000000.chombo.h5'}\n",
     "    },\n",
     "}\n",
     "\n",
@@ -229,6 +237,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "def time_to_snap_id(t, ds):\n",
     "    for i in range(0, ds.dataset.num_of_snapshots):\n",
     "        ds.dataset.jump_to(i)\n",
@@ -371,12 +380,12 @@
    "source": [
     "def plot_maps(x, y, heatmaps):\n",
     "    titles = {\n",
-    "        'Rhyme Log 100': {'name': 'Rhyme CaseA (100 Log bins)', 'num': 0},\n",
+    "        'Rhyme CaseA Log 100': {'name': 'Rhyme CaseA', 'num': 0},\n",
     "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
     "        'Enzo': {'name': 'Enzo', 'num': 2},\n",
     "        'Flash': {'name': 'Flash', 'num': 3},\n",
     "        'HART': {'name': 'HART', 'num': 4},\n",
-    "        'Rhyme Log 3': {'name': 'Rhyme CaseA (3 Log bins)', 'num': 5},\n",
+    "        'Rhyme CaseB Log 100': {'name': 'Rhyme CaseB', 'num': 5},\n",
     "        'LICORICE': {'name': 'Licorice', 'num': 6},\n",
     "        'RSPH': {'name': 'RSPH', 'num': 7},\n",
     "        'RH1D': {'name': 'RH1D', 'num': 8},\n",
@@ -407,12 +416,10 @@
     "    attr_cs_rng = {'nH': [-4, -2], 'p': [-17, -14.5], 'T': [2, 4.5], 'fHI': [-6, 0]}\n",
     "    n_slices = len(attrs)\n",
     "    \n",
-    "    zmin, zmax = {}, {}\n",
-    "    for attr in attrs:\n",
-    "        zmin[attr] = np.min([np.min(xy) for sn in heatmaps.keys() for xy in heatmaps[sn][attr]])\n",
-    "        zmax[attr] = np.max([np.max(xy) for sn in heatmaps.keys() for xy in heatmaps[sn][attr]])\n",
-    "    \n",
     "    for sn, h in heatmaps.items():\n",
+    "        if sn not in titles.keys():\n",
+    "            continue\n",
+    "\n",
     "        si = titles[sn]['num']\n",
     "        for slc, attr in enumerate(attrs):\n",
     "            d1, d2 = slc * pi / 2 / n_slices, (slc + 1) * pi / 2 / n_slices\n",
@@ -516,12 +523,14 @@
     "            if not RHYME[sn]['mapPlot']:\n",
     "                continue\n",
     "        heatmaps[sn] = {}\n",
-    "        if sn == 'Rhyme Log 100':\n",
+    "        if sn == 'Rhyme CaseA Log 100':\n",
     "            heatmaps[sn]['row'] = 1\n",
     "            heatmaps[sn]['col'] = 1\n",
-    "        elif sn == 'Rhyme Log 3':\n",
+    "        elif sn == 'Rhyme CaseB Log 100':\n",
     "            heatmaps[sn]['row'] = 3\n",
     "            heatmaps[sn]['col'] = 1\n",
+    "        elif sn[:5] == 'Rhyme':\n",
+    "            continue\n",
     "        else:\n",
     "            heatmaps[sn]['row'] = BINARIES[sn]['row']\n",
     "            heatmaps[sn]['col'] = BINARIES[sn]['col']\n",
@@ -539,7 +548,11 @@
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=30)"
+    "    fHI_maps(t=10)\n",
+    "    fHI_maps(t=30)\n",
+    "    fHI_maps(t=100)\n",
+    "    fHI_maps(t=200)\n",
+    "    fHI_maps(t=500)"
    ]
   },
   {
@@ -608,11 +621,12 @@
     "            )\n",
     "            \n",
     "    width = 500 if len_t <= 2 else 1000\n",
-    "    height = width / len_t + 50\n",
+    "    height = width / len_t + 160\n",
     "    \n",
     "    fig.update_layout(\n",
     "        width=width, height=height,\n",
     "        margin=dict(t=60, r=60, b=60, l=80),\n",
+    "        legend=dict(orientation=\"h\", yanchor=\"top\", y=-.4, xanchor=\"right\", x=1),\n",
     "    )\n",
     "    \n",
     "    fig.show()\n",
