--- a/tests/Iliev-7/Iliev-7.ipynb
+++ b/tests/Iliev-7/Iliev-7.ipynb
@@ -308,7 +308,7 @@
     "    width = 700\n",
     "    height = 500\n",
     "    \n",
-    "    for t in DATA.keys():\n",
+    "    for t in [1, 3, 10, 25]: # DATA.keys():\n",
     "        print(f'time: {t} Myr')\n",
     "        fig = go.Figure()\n",
     "        \n",
@@ -377,7 +377,8 @@
     "    width = 1000\n",
     "    height = 380\n",
     "    \n",
-    "    for t in DATA.keys():\n",
+    "    for t in [1, 3, 10, 25]: # DATA.keys():\n",
+    "        print(f\"t = {t} Myr\")\n",
     "        fig = make_subplots(\n",
     "            2, 4,\n",
     "            column_widths=[2, 1, 1, 1], row_heights=[1, 1],\n",
