--- a/tests/Iliev-6/Iliev-6.ipynb
+++ b/tests/Iliev-6/Iliev-6.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ILIEV_5_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T6_results'\n",
+    "ILIEV_6_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T6_results'\n",
     "\n",
     "IMAGE_DIR = './images'\n",
     "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
@@ -86,56 +86,56 @@
     "BINARIES = {\n",
     "    'CAPREOLE+C2-RAY': {\n",
     "        'row': 1, 'col':3, 'color': COLORS[0], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'Flash': {\n",
     "#         'row':1, 'col 'c': 4, 'color': COLORS[4], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'orig': {t: {'path': f\"{ILIEV_6_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'add': {t: {'path': f\"{ILIEV_6_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'HART': {\n",
     "        'row': 2, 'col': 3, 'color': COLORS[5], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/hart{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/hart_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/hart{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/hart_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'LICORICE': {\n",
     "#         'row': 2, 'col': 4, 'color': COLORS[6], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'orig': {t: {'path': f\"{ILIEV_6_DIR}/licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'add': {t: {'path': f\"{ILIEV_6_DIR}/licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'RSPH': {\n",
     "        'row': 3, 'col': 3, 'color': COLORS[2], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rsph{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rsph_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/rsph{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/rsph_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "    'RH1D': {\n",
     "        'row': 3, 'col': 4, 'color': COLORS[3], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rh1d{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rh1d_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/rh1d{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/rh1d_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'ZEUS-MP': {\n",
     "#         'row': 4, 'col': 3, 'color': COLORS[7], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'orig': {t: {'path': f\"{ILIEV_6_DIR}/zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
+    "#         'add': {t: {'path': f\"{ILIEV_6_DIR}/zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "}\n",
     "\n",
     "RHYME = {\n",
-    "    'Rhyme CaseA Log 3': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-6-logBins-CaseA-3bins/Iliev-6-logBins-CaseA-3bins-000000.chombo.h5'}\n",
-    "    },\n",
+    "#     'Rhyme CaseA Log 3': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-6-logBins-CaseA-3bins/Iliev-6-logBins-CaseA-3bins-000000.chombo.h5'}\n",
+    "#     },\n",
     "    'Rhyme CaseA Log 100': {\n",
     "        'mapPlot': False, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-6-logBins-CaseA-100bins/Iliev-6-logBins-CaseA-100bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme CaseB Log 3': {\n",
-    "        'mapPlot': True, 'color': COLORS2[2], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-6-logBins-CaseB-3bins/Iliev-6-logBins-CaseB-3bins-000000.chombo.h5'}\n",
-    "    },\n",
+    "#     'Rhyme CaseB Log 3': {\n",
+    "#         'mapPlot': True, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-6-logBins-CaseB-3bins/Iliev-6-logBins-CaseB-3bins-000000.chombo.h5'}\n",
+    "#     },\n",
     "    'Rhyme CaseB Log 100': {\n",
-    "        'mapPlot': True, 'color': COLORS2[2], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "        'mapPlot': True, 'color': COLORS2[1], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-6-logBins-CaseB-100bins/Iliev-6-logBins-CaseB-100bins-000000.chombo.h5'}\n",
     "    },\n",
     "}\n",
@@ -153,6 +153,30 @@
     "\n",
     "for sim in RHYME.values():\n",
     "    check_if_exist(sim[0]['path'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_binary(path=f\"{ILIEV_6_DIR}/zeus_add1.bin\"):\n",
+    "    r = {}\n",
+    "    \n",
+    "    f = FortranFile(snap['path'], 'r')\n",
+    "    domain = f.read_ints(np.int32)\n",
+    "\n",
+    "    r['n'] = f.read_reals(np.float32).reshape(domain)\n",
+    "    r['M'] = f.read_reals(np.float32).reshape(domain)\n",
+    "    r['nHII'] = f.read_reals(np.float32).reshape(domain)\n",
+    "\n",
+    "    f.close()\n",
+    "    \n",
+    "    return r\n",
+    "\n",
+    "# if __name__ == '__main__' and '__file__' not in globals():\n",
+    "#     DD = test_binary()"
    ]
   },
   {
@@ -283,14 +307,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def check_snaps(snap1='Rhyme CaseA Log 100', snap2='CAPREOLE+C2-RAY', attr='nHI', func=np.log10, t=25, l=2):\n",
+    "    fig = go.Figure()\n",
+    "    \n",
+    "    residue = DATA[t][snap1][attr][:, :, l] / DATA[t][snap2][attr][:, :, l]\n",
+    "    \n",
+    "    fig.add_trace(go.Heatmap(\n",
+    "        z=func(residue),\n",
+    "    ))\n",
+    "    \n",
+    "    width, height = 500, 500\n",
+    "    fig.update_layout(\n",
+    "        title=f'{snap1} vs. {snap2}: {attr} @ {t}',\n",
+    "        width=width, height=height,\n",
+    "        xaxis=dict(title='x'),\n",
+    "        yaxis=dict(title='y'),\n",
+    "    )\n",
+    "    \n",
+    "    fig.show()\n",
+    "    \n",
+    "if __name__ == '__main__' and '__file__' not in globals():\n",
+    "    check_snaps(t=1, l=1, attr='nHI', )#func=lambda x: x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def check_cell(attr='n', x=1, y=1, z=1):\n",
     "    for t, snap in DATA.items():\n",
     "        print('')\n",
     "        for simname, sim in snap.items():\n",
     "            print(f\"{t:3.1f}: {simname:18s}: {attr} = {sim[attr][x, y, z]:3.2e}\")\n",
     "\n",
-    "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    check_cell(attr='T', x=64)"
+    "# if __name__ == '__main__' and '__file__' not in globals():\n",
+    "#     check_cell(attr='T', x=64)"
    ]
   },
   {
@@ -368,26 +421,28 @@
     "                    thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
     "                    x=1.02, y=slc/n_slices, len=1/n_slices, xanchor='left', yanchor='bottom',\n",
     "                ),\n",
-    "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme_CaseA' else False,\n",
+    "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme CaseA Log 100' else False,\n",
     "            ), h['row'], h['col'])\n",
     "            \n",
-    "            if h['row'] == 4 or sn == 'Rhyme_CaseB':\n",
+    "            if h['row'] == 4 or sn == 'Rhyme CaseB Log 100':\n",
     "                fig.update_xaxes(\n",
-    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "                    row=h['row'], col=h['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    range=(0, max(x)),\n",
+    "                    tickmode='array', tickvals=[0, 0.2, 0.4, 0.6, 0.8], ticktext=['0', '.2', '.4', '.6', '.8'],\n",
     "                )\n",
     "            else:\n",
-    "                fig.update_xaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False,)\n",
+    "                fig.update_xaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False, range=(0, max(x)),)\n",
     "            \n",
-    "            if h['col'] == 1:\n",
+    "            if h['col'] == 1 or sn == 'Rhyme CaseA Log 100':\n",
     "                fig.update_yaxes(\n",
-    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "                    row=h['row'], col=h['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    range=(0, max(y)),\n",
+    "                    tickmode='array', tickvals=[0, 0.2, 0.4, 0.6, 0.8], ticktext=['0', '.2', '.4', '.6', '.8'],\n",
     "                )\n",
     "            else:\n",
-    "                fig.update_yaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False,)\n",
+    "                fig.update_yaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False, range=(0, max(y)),)\n",
     "                \n",
-    "            l = 15 + 8.0/128\n",
+    "            l = 0.8 + 8 * 0.8/128\n",
     "            if d2 <= pi / 4:\n",
     "                xend = l\n",
     "                yend = l * np.tan(d2)\n",
@@ -414,7 +469,7 @@
     "            )\n",
     "            \n",
     "        fig.add_annotation(\n",
-    "            x=14, y=0.25, xanchor='right', yanchor='bottom',\n",
+    "            x=0.73, y=0.02, xanchor='right', yanchor='bottom',\n",
     "            xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
     "            text=titles[sn]['name'], showarrow=False,\n",
     "            font=dict(color='white', size=22 if h['col'] == 1 else 14), \n",
@@ -434,7 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def fHI_maps(t=75):\n",
@@ -466,14 +523,17 @@
     "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, l])\n",
     "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, l] / (sim['nHI'][:, :, l] + sim['nHII'][:, :, l]))\n",
     "    \n",
-    "    x = np.linspace(0, 15, 128)\n",
+    "    x = np.linspace(0, 0.8, 128)\n",
     "        \n",
     "    fig = plot_maps(x, x, heatmaps)\n",
     "    \n",
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=10)"
+    "    fHI_maps(t=1)\n",
+    "    fHI_maps(t=3)\n",
+    "    fHI_maps(t=10)\n",
+    "    fHI_maps(t=25)"
    ]
   },
   {
@@ -512,7 +572,7 @@
     "    for i, t in enumerate(ts):\n",
     "        for si, (sn, sim) in enumerate(DATA[t].items()):\n",
     "            x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
-    "            l = 1\n",
+    "            l = 2\n",
     "            if attr == 'fHI':\n",
     "                y = np.log10(sim['nHI'][:, l, l] / (sim['nHI'][:, l, l] + sim['nHII'][:, l, l]))\n",
     "            else:\n",
@@ -542,7 +602,6 @@
     "            \n",
     "    width = 500 if len_t <= 2 else 1000\n",
     "    height = width / len_t + 50\n",
-    "    \n",
     "    fig.update_layout(\n",
     "        width=width, height=height,\n",
     "        margin=dict(t=60, r=60, b=60, l=80),\n",
@@ -551,9 +610,9 @@
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    plot_lineouts([1, 10, 25, 75], 'p', 'p [g / m s<sup>2</sup>]')\n",
-    "    plot_lineouts([1, 10, 25, 75], 'T', 'T [K]')\n",
-    "    plot_lineouts([1, 10, 25, 75], 'fHI', 'f<sub>HI</sub>')"
+    "    plot_lineouts([1, 10, 25], 'fHI', 'f<sub>HI</sub>')\n",
+    "    plot_lineouts([1, 10, 25], 'T', 'T [K]')\n",
+    "    plot_lineouts([1, 10, 25], 'p', 'p [g / m s<sup>2</sup>]')"
    ]
   },
   {
@@ -597,7 +656,7 @@
     "            fHI_prof = nHII_prof / (nHI_prof + nHII_prof)\n",
     "\n",
     "            pos = i_front_get_position(xs, fHI_prof, f0=0.9)\n",
-    "            \n",
+    "            75\n",
     "            if len(pos) == 1:\n",
     "                sim['I-front']['pos_kpc'] = pos[0][0]\n",
     "            else:\n",
@@ -640,7 +699,7 @@
     "        margin=dict(b=10, t=10, l=10, r=10),\n",
     "        width=width, height=height,\n",
     "        xaxis=dict(\n",
-    "            type='log', mirror=True, title='<i>t</i> [Myr]',\n",
+    "            type='linear', mirror=True, title='<i>t</i> [Myr]', range=(0, 26),\n",
     "            titlefont=dict(size=18),\n",
     "            tickmode='array',\n",
     "            tickvals=TIMES,\n",
